--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             box-sizing: border-box; 
             -webkit-user-select: none; 
             user-select: none; 
-            touch-action: none; 
+            -webkit-tap-highlight-color: transparent;
         }
 
         @font-face {
@@ -41,6 +41,7 @@
             overflow: hidden; display: flex; flex-direction: column; align-items: center;
             transition: background 0.4s ease, color 0.4s ease;
             letter-spacing: var(--base-spacing);
+            touch-action: none;
         }
 
         #custom-cursor {
@@ -55,13 +56,14 @@
         .top-bar {
             background: var(--top-bar-bg); color: var(--top-bar-text); font-size: 10px; height: 22px;
             display: flex; align-items: center; position: fixed; top: 0; width: 100%;
-            z-index: 100; overflow: hidden; opacity: 0; transition: opacity 0.5s, background 0.4s, color 0.4s;
+            z-index: 100; overflow: hidden; opacity: 0; transition: opacity 0.5s;
         }
 
         #marquee-text { 
             display: inline-block;
             white-space: nowrap; 
-            will-change: transform; 
+            will-change: transform;
+            padding-left: 100%; /* Начало из-за границы экрана */
         }
 
         .main-wrapper {
@@ -95,20 +97,24 @@
 
         .content-fade {
             opacity: 0; visibility: hidden; transition: 0.8s;
-            margin-top: 75px; width: 100%;
-            display: flex; flex-direction: column;
+            margin-top: 105px; /* 75px старых + 30px отступа от локации */
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            gap: 5px; /* Стандартный зазор между ссылками */
         }
         .content-fade.visible { opacity: 1; visibility: visible; }
 
         .link-text {
             display: block; font-weight: bold; font-size: 13px; text-transform: uppercase;
-            color: var(--main-color); text-decoration: none; margin-bottom: 5px; padding: 8px 0;
+            color: var(--main-color); text-decoration: none; padding: 8px 0;
             border-bottom: 1px solid var(--main-color); transition: 0.4s ease;
         }
 
         .gallery-container { 
             position: relative; width: 100%; height: var(--gallery-height); 
-            margin-top: 20px; overflow: hidden; transition: height 0.3s ease;
+            margin-top: 30px; /* Отступ 30 пикселей перед галереей */
+            overflow: hidden; transition: height 0.3s ease;
         }
         .gallery { display: flex; width: max-content; height: 100%; will-change: transform; }
         .gallery img { 
@@ -143,6 +149,7 @@
             position: fixed; bottom: 0; left: 50%; transform: translateX(-50%);
             width: 100%; max-width: 500px; padding: 15px 20px;
             display: flex; justify-content: space-between; align-items: flex-end; z-index: 200;
+            margin-bottom: 10px; /* Немного места внизу */
         }
 
         .bottom-btn {
@@ -243,19 +250,35 @@
         let galPos = 0, galCurrentSpeed = 0, galTargetSpeed = 0;
         let isMuted = true, animationsStarted = false;
         
-        // Cursor timeout logic
         let cursorTimeout;
-        function hideCursor() { cursor.style.opacity = 0; }
-        function showCursor() { cursor.style.opacity = 1; }
+        const hideCursor = () => { cursor.style.opacity = 0; };
+        const showCursor = () => { cursor.style.opacity = 1; };
 
-        // Discord Copy Logic
+        // Универсальное отслеживание координат
+        const updateCoords = (e) => {
+            if (e.touches && e.touches.length > 0) {
+                mouseX = e.touches[0].clientX;
+                mouseY = e.touches[0].clientY;
+            } else {
+                mouseX = e.clientX;
+                mouseY = e.clientY;
+            }
+            showCursor();
+            clearTimeout(cursorTimeout);
+            cursorTimeout = setTimeout(hideCursor, 1000);
+        };
+
+        window.addEventListener('mousemove', updateCoords);
+        window.addEventListener('touchmove', updateCoords);
+        window.addEventListener('touchstart', updateCoords);
+        window.addEventListener('mouseenter', showCursor);
+        window.addEventListener('mouseleave', hideCursor);
+
         document.getElementById('discord-btn').onclick = function() {
             const originalText = this.innerText;
             navigator.clipboard.writeText('dnka').then(() => {
                 this.innerText = 'COPIED!';
-                setTimeout(() => {
-                    this.innerText = originalText;
-                }, 1000);
+                setTimeout(() => { this.innerText = originalText; }, 1000);
             });
         };
 
@@ -266,36 +289,34 @@
         function getContrastYIQ(hexcolor){
             hexcolor = hexcolor.replace("#", "");
             if(hexcolor.length === 3) hexcolor = hexcolor.split('').map(s => s + s).join('');
-            var r = parseInt(hexcolor.substr(0,2),16);
-            var g = parseInt(hexcolor.substr(2,2),16);
-            var b = parseInt(hexcolor.substr(4,2),16);
-            var yiq = ((r*299)+(g*587)+(b*114))/1000;
+            const r = parseInt(hexcolor.substr(0,2),16), g = parseInt(hexcolor.substr(2,2),16), b = parseInt(hexcolor.substr(4,2),16);
+            const yiq = ((r*299)+(g*587)+(b*114))/1000;
             return (yiq >= 128) ? '#000000' : '#ffffff';
         }
 
         function changeSize(type, delta) {
             if (type === 'text') {
-                let current = parseInt(window.getComputedStyle(document.querySelector('.link-text')).fontSize);
+                const current = parseInt(window.getComputedStyle(document.querySelector('.link-text')).fontSize);
                 document.querySelectorAll('.link-text').forEach(el => el.style.fontSize = (current + delta) + 'px');
             } else if (type === 'btn') {
-                let currentSize = parseInt(root.style.getPropertyValue('--btn-size') || 28);
-                let currentFont = parseFloat(root.style.getPropertyValue('--btn-font-size') || 10);
+                const currentSize = parseInt(root.style.getPropertyValue('--btn-size') || 28);
+                const currentFont = parseFloat(root.style.getPropertyValue('--btn-font-size') || 10);
                 root.style.setProperty('--btn-size', (currentSize + delta) + 'px');
                 root.style.setProperty('--btn-font-size', (currentFont + delta/4) + 'px');
             } else if (type === 'space') {
-                let current = parseFloat(root.style.getPropertyValue('--base-spacing') || 0.2);
+                const current = parseFloat(root.style.getPropertyValue('--base-spacing') || 0.2);
                 root.style.setProperty('--base-spacing', (current + delta) + 'px');
             } else if (type === 'gal') {
-                let current = parseInt(root.style.getPropertyValue('--gallery-height') || 200);
+                const current = parseInt(root.style.getPropertyValue('--gallery-height') || 200);
                 root.style.setProperty('--gallery-height', Math.max(50, current + delta) + 'px');
             }
         }
 
         document.getElementById('bg-input').addEventListener('input', (e) => {
             let bgColor = e.target.value.startsWith('#') ? e.target.value : '#' + e.target.value;
-            if (bgColor.length < 4 && bgColor.length !== 7) return;
+            if (bgColor.length !== 4 && bgColor.length !== 7) return;
             root.style.setProperty('--bg-color', bgColor);
-            let adaptiveText = getContrastYIQ(bgColor);
+            const adaptiveText = getContrastYIQ(bgColor);
             root.style.setProperty('--main-color', adaptiveText);
             root.style.setProperty('--btn-bg', adaptiveText);
             root.style.setProperty('--btn-text', bgColor);
@@ -309,12 +330,16 @@
             cursor.style.transform = `translate3d(${cursorX}px, ${cursorY}px, 0) translate(-50%, -50%)`;
             
             if (animationsStarted) {
+                // Marquee: Возврат к старой логике "бега"
                 marqueeCurrentSpeed += (marqueeTargetSpeed - marqueeCurrentSpeed) * 0.08;
                 marqueePos -= marqueeCurrentSpeed;
-                // Marquee wrap logic fixed for no gap
-                if (marqueePos < -(marqueeEl.offsetWidth / 2)) marqueePos = 0;
+                // Сброс когда текст полностью ушел за левый край
+                if (marqueePos < -marqueeEl.scrollWidth) {
+                    marqueePos = window.innerWidth;
+                }
                 marqueeEl.style.transform = `translateX(${marqueePos}px)`;
 
+                // Gallery
                 galCurrentSpeed += (galTargetSpeed - galCurrentSpeed) * 0.05;
                 galPos -= galCurrentSpeed;
                 if (Math.abs(galPos) >= gallery.offsetWidth / 2) galPos = 0;
@@ -323,16 +348,6 @@
             requestAnimationFrame(loop);
         }
 
-        window.addEventListener('mousemove', e => { 
-            mouseX = e.clientX; mouseY = e.clientY; 
-            showCursor();
-            clearTimeout(cursorTimeout);
-            cursorTimeout = setTimeout(hideCursor, 1000);
-        });
-
-        window.addEventListener('mouseenter', showCursor);
-        window.addEventListener('mouseleave', hideCursor);
-
         document.getElementById('mute-btn').onclick = function() {
             isMuted = !isMuted;
             if(!isMuted) { audio.play(); this.innerText = "[ SOUND: ON ]"; galTargetSpeed = 1.2; }
@@ -340,10 +355,10 @@
         };
 
         document.getElementById('theme-btn').onclick = () => {
-            let currentBg = getComputedStyle(root).getPropertyValue('--bg-color').trim();
-            let newBg = (currentBg === '#ffffff' || currentBg === 'rgb(255, 255, 255)') ? '#000000' : '#ffffff';
+            const currentBg = getComputedStyle(root).getPropertyValue('--bg-color').trim();
+            const newBg = (currentBg === '#ffffff' || currentBg === 'rgb(255, 255, 255)') ? '#000000' : '#ffffff';
             root.style.setProperty('--bg-color', newBg);
-            let adaptiveText = getContrastYIQ(newBg);
+            const adaptiveText = getContrastYIQ(newBg);
             root.style.setProperty('--main-color', adaptiveText);
             root.style.setProperty('--btn-bg', adaptiveText);
             root.style.setProperty('--btn-text', newBg);
@@ -355,6 +370,7 @@
         document.getElementById('close-acc').onclick = () => document.getElementById('acc-menu').classList.remove('active');
 
         window.onload = () => {
+            marqueePos = window.innerWidth; // Начальная позиция бегущей строки
             const text = "HELLO, IM DNKA!";
             let i = 0;
             const type = setInterval(() => {
