--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>dnka</title>
+    <title>DNKA.LINKS</title>
     <link rel="icon" href="favicon.ico?v=2" type="image/x-icon">
     
     <style>
@@ -224,3 +224,4 @@
     </script>
 </body>
 </html>
+
