--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
             touch-action: none; 
             -webkit-user-select: none;
             user-select: none;
-            cursor: none; /* Прячем системный курсор */
+            cursor: none;
         }
 
-        /* Кастомный умный курсор */
         #cursor {
             position: fixed;
             width: 8px;
@@ -88,7 +87,7 @@
 
         .social-row {
             display: flex;
-            gap: 8px; /* Уплотненный отступ */
+            gap: 8px;
             justify-content: flex-start;
             flex-wrap: wrap;
         }
@@ -105,12 +104,11 @@
             transition: border-color 0.2s ease;
         }
 
-        /* Только подчеркивание при наведении, без изменения прозрачности */
         .social-link:hover, .email-link:hover {
             border-color: black;
         }
 
-        #discord-btn { min-width: 0; }
+        #discord-btn { min-width: 0; cursor: pointer; }
         .email-link { margin-top: 5px; }
 
         .f1 { font-family: 'CustomFont1', sans-serif; }
@@ -145,7 +143,6 @@
     </div>
 
     <script>
-        // Анимация печати текста
         const text = "dnka";
         const typewriter = document.getElementById('typewriter');
         const fontClasses = ['f1', 'f2', 'f3'];
@@ -166,7 +163,6 @@
             setTimeout(animate, typeSpeed);
         }
 
-        // Логика кастомного курсора
         const cursor = document.getElementById('cursor');
         let mouseX = 0, mouseY = 0;
         let cursorX = 0, cursorY = 0;
@@ -191,27 +187,41 @@
             }
         };
 
-        document.addEventListener('mouseenter', () => { cursor.style.opacity = "1"; });
-        document.addEventListener('mouseleave', () => { 
-            cursor.style.opacity = "0"; 
-            firstMove = true; 
-        });
+        document.addEventListener('mouseenter', () => { if (!window.matchMedia("(pointer: coarse)").matches) cursor.style.opacity = "1"; });
+        document.addEventListener('mouseleave', () => { cursor.style.opacity = "0"; firstMove = true; });
 
         document.addEventListener('mousemove', (e) => updatePosition(e.clientX, e.clientY));
-        document.addEventListener('touchstart', (e) => updatePosition(e.touches[0].clientX, e.touches[0].clientY), { passive: true });
-        document.addEventListener('touchmove', (e) => updatePosition(e.touches[0].clientX, e.touches[0].clientY), { passive: true });
+        document.addEventListener('touchstart', (e) => {
+            updatePosition(e.touches[0].clientX, e.touches[0].clientY);
+            cursor.style.opacity = "0"; // Скрываем кастомный курсор на тач-устройствах
+        }, { passive: true });
 
-        // Копирование Discord ника
+        // Исправленный блок для Discord
         const discordBtn = document.getElementById('discord-btn');
-        discordBtn.addEventListener('pointerdown', function(e) {
+        discordBtn.addEventListener('click', function(e) {
+            e.preventDefault();
+            const originalText = "discord";
+            
             navigator.clipboard.writeText("dnka").then(() => {
-                const originalText = "discord";
                 discordBtn.textContent = "copied!";
+                setTimeout(() => { discordBtn.textContent = originalText; }, 1000);
+            }).catch(err => {
+                // Фолбек на случай ограничений браузера
+                const textArea = document.createElement("textarea");
+                textArea.value = "dnka";
+                document.body.appendChild(textArea);
+                textArea.select();
+                try {
+                    document.execCommand('copy');
+                    discordBtn.textContent = "copied!";
+                } catch (err) {
+                    discordBtn.textContent = "error";
+                }
+                document.body.removeChild(textArea);
                 setTimeout(() => { discordBtn.textContent = originalText; }, 1000);
             });
         });
 
-        // Блокировка системного зума
         document.addEventListener('touchstart', (e) => { if (e.touches.length > 1) e.preventDefault(); }, { passive: false });
         let lastTouchEnd = 0;
         document.addEventListener('touchend', (e) => {
@@ -224,5 +234,3 @@
     </script>
 </body>
 </html>
-
-
